--- a/DNews/app/build.gradle
+++ b/DNews/app/build.gradle
@@ -26,6 +26,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     //implementation 'com.google.android.gms:play-services-ads:11.8.0'
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    //implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.kaopiz:kprogresshud:1.2.0'
 }
