--- a/DNews/app/build.gradle
+++ b/DNews/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.del.dnews"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -25,7 +25,9 @@ dependencies {
     
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
-    //implementation 'com.google.android.gms:play-services-ads:11.8.0'
-    //implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.google.android.gms:play-services-ads:11.8.0'
+    implementation 'com.android.support:support-v4:18.0.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.kaopiz:kprogresshud:1.2.0'
+    
 }
