--- a/DNews/app/src/main/AndroidManifest.xml
+++ b/DNews/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
     <!--lihat sambungan jaringan-->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
+    <!--mencegah ponsel menjadi tidak aktif-->
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+
     <application
         android:allowBackup="true"
         android:name="com.del.dnews.App"
@@ -16,7 +19,22 @@
         android:roundIcon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
+        android:largeHeap="true"
+        android:usesCleartextTraffic="true"
         android:resizeableActivity="false">
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
+
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:theme="@android:style/Theme.Translucent"/>
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/Admob_ID"/>
 
         <activity
             android:name="com.del.dnews.activity.SplashActivity"
@@ -35,36 +53,22 @@
 
         <activity
             android:name="com.del.dnews.activity.MainActivity"
+            android:hardwareAccelerated="true"
+            android:supportsPictureInPicture="true"
             android:screenOrientation="portrait"/>
 
         <activity
             android:name="com.del.dnews.activity.DebugActivity"
             android:screenOrientation="portrait"/>
 
- 
         <activity
-            android:name="com.del.dnews.activity.BusinessActivity"
+            android:name="com.del.dnews.activity.ListNewsActivity"
             android:screenOrientation="portrait"/>
-   
+
         <activity
-            android:name="com.del.dnews.activity.EntertainmentActivity"
+            android:name="com.del.dnews.activity.ViewContentActivity"
             android:screenOrientation="portrait"/>
-   
-        <activity
-            android:name="com.del.dnews.activity.GeneralActivity"
-            android:screenOrientation="portrait"/>
-   
-        <activity
-            android:name="com.del.dnews.activity.SportsActivity"
-            android:screenOrientation="portrait"/>
- 
-        <activity
-            android:name="com.del.dnews.activity.HealthActivity"
-            android:screenOrientation="portrait"/>
-    
-        <activity
-            android:name="com.del.dnews.activity.TechnologyActivity"
-            android:screenOrientation="portrait"/>
+
         <meta-data
             android:name="android.max_aspect"
             android:value="4.0"/>
