--- a/DNews/app/src/main/AndroidManifest.xml
+++ b/DNews/app/src/main/AndroidManifest.xml
@@ -23,19 +23,6 @@
         android:usesCleartextTraffic="true"
         android:resizeableActivity="false">
 
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
-
-        <activity
-            android:name="com.google.android.gms.ads.AdActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
-            android:theme="@android:style/Theme.Translucent"/>
-
-        <meta-data
-            android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="@string/Admob_ID"/>
-
         <activity
             android:name="com.del.dnews.activity.SplashActivity"
             android:theme="@style/AppTheme.Launcher"
@@ -56,11 +43,12 @@
             android:hardwareAccelerated="true"
             android:supportsPictureInPicture="true"
             android:screenOrientation="portrait"/>
-
-        <activity
-            android:name="com.del.dnews.activity.DebugActivity"
+        
+        <activity 
+            android:label="App Crash"
+            android:name="com.del.dnews.util.CrashHandler$CrashActiviy"
             android:screenOrientation="portrait"/>
-
+        
         <activity
             android:name="com.del.dnews.activity.ListNewsActivity"
             android:screenOrientation="portrait"/>
@@ -68,7 +56,11 @@
         <activity
             android:name="com.del.dnews.activity.ViewContentActivity"
             android:screenOrientation="portrait"/>
-
+        
+        <activity
+            android:name="com.del.dnews.activity.SettingActivity"
+            android:screenOrientation="portrait"/>
+        
         <meta-data
             android:name="android.max_aspect"
             android:value="4.0"/>
